// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableLinksTextCard component renders correctly 1`] = `
<div
  class="ExpandableLinksTextCards"
>
  <h3
    class="MuiTypography-root title Typography MuiTypography-h5"
  >
    Heading One
  </h3>
  <div
    class="shown-links-wrapper"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover link Anchorlink MuiTypography-colorPrimary"
      href="/"
    >
      <span>
        Link One
      </span>
    </a>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover link Anchorlink MuiTypography-colorPrimary"
      href="/"
    >
      <span>
        Link Two
      </span>
    </a>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover link Anchorlink MuiTypography-colorPrimary"
      href="/"
    >
      <span>
        Link Three
      </span>
    </a>
  </div>
  <div
    class="hidden-links-wrapper"
  />
</div>
`;

exports[`ExpandableLinksTextCard component renders correctly with more than 3 links 1`] = `
<div
  class="ExpandableLinksTextCards"
>
  <h3
    class="MuiTypography-root title Typography MuiTypography-h5"
  >
    Heading One
  </h3>
  <div
    class="shown-links-wrapper"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover link Anchorlink MuiTypography-colorPrimary"
      href="/"
    >
      <span>
        Link One
      </span>
    </a>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover link Anchorlink MuiTypography-colorPrimary"
      href="/"
    >
      <span>
        Link Two
      </span>
    </a>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover link Anchorlink MuiTypography-colorPrimary"
      href="/"
    >
      <span>
        Link Three
      </span>
    </a>
  </div>
  <div
    class="hidden-links-wrapper"
  >
    <div>
      <div />
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Open
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
